--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,3 +1,5 @@
 spring.application.name = CustomerMS
 server.port = 8081
 
+custRibbon.ribbon.eureka.enabled=false
+custRibbon.ribbon.listOfServers = http://localhost:9001, http://localhost:9002
