--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -3,3 +3,8 @@ server.port = 8081
 
 custRibbon.ribbon.eureka.enabled=false
 custRibbon.ribbon.listOfServers = http://localhost:9001, http://localhost:9002
+
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
